# PlayMe_002

./: .gitignore  PlayMe.py  PlayMe_002.txt  README.md  config.py  env.example  main.py  manage.py  pyproject.toml
chatbot/: urls.py  views.py
chatbot/templatetags/: static_dist.py
playme_chatbot/: asgi.py  settings.py  urls.py  wsgi.py
static/: about.txt
templates/: base.html  chatbot.html  home.html  logs_playme.html
