[tool.poetry]
name = "PlayMe"
version = "0.1.0"
description = ""
authors = ["Vionaaru <d.s.kasimov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
environs = "^11.2.0"
django = "^5.1.3"
requests = "^2.32.3"
fastapi = {extras = ["all"], version = "^0.115.5"}
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#start-api = "uvicorn.main:app --reload"

[tool.poetry.scripts]
start-api = "main:app"
